syntax = "proto3";

package rust_grpc_sample;

message HelloRequest {
  string name = 1;
  string message = 2;
}

message HelloResponse {
  string reply_message = 1;
}

service HelloRpcService {
  rpc Hello (HelloRequest) returns (HelloResponse);
}
