syntax = "proto3";

package rust_grpc_sample.api;

import "rust_grpc_sample/entity/entity.proto";

message HelloRequest {
  string name = 1;
  string message = 2;
}

message HelloResponse {
  string reply_message = 1;
}

message HelloQueryRequest {
}

message HelloQueryResponse {
  rust_grpc_sample.entity.HelloEntity data = 1;
}

service HelloRpcService {
  rpc Hello (HelloRequest) returns (HelloResponse);
  rpc HelloQuery (HelloQueryRequest) returns (HelloQueryResponse);
}
